[gd_scene load_steps=5 format=2]

[ext_resource path="res://tool/GameIntelligence/Tech3.gd" type="Script" id=4]
[ext_resource path="res://gui/theme.tres" type="Theme" id=5]
[ext_resource path="res://gui/panels/panel_dark.tres" type="StyleBox" id=6]
[ext_resource path="res://gui/fonts/FontSmall.tres" type="DynamicFont" id=7]

[node name="Tech" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1680.0
margin_bottom = -1040.0
focus_mode = 2
mouse_filter = 1
theme = ExtResource( 5 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 315.0
margin_bottom = 96.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_right = 88.0
margin_bottom = 88.0

[node name="IconBackground" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 88, 88 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_right = 88.0
margin_bottom = 88.0
rect_min_size = Vector2( 88, 88 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texts" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 214.0
margin_bottom = 88.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="TitleLabel" type="Label" parent="HBoxContainer/Texts"]
margin_top = 22.0
margin_right = 110.0
margin_bottom = 47.0
mouse_filter = 1
custom_colors/font_color = Color( 1, 0.666667, 0.368627, 1 )
text = "Power Up"
align = 1

[node name="CostLabel" type="Label" parent="HBoxContainer/Texts"]
margin_left = 39.0
margin_top = 47.0
margin_right = 71.0
margin_bottom = 66.0
mouse_filter = 1
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
text = "free"
align = 1
valign = 1

[node name="CostSection" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 230.0
margin_right = 307.0
margin_bottom = 88.0
custom_constants/separation = 5
alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/CostSection"]
margin_right = 24.0
margin_bottom = 88.0

[node name="UsesLabel" type="Label" parent="HBoxContainer/CostSection"]
margin_left = 29.0
margin_top = 31.0
margin_right = 77.0
margin_bottom = 56.0
rect_min_size = Vector2( 48, 0 )
align = 1

[node name="SelectedPanel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 315.0
margin_bottom = 96.0

[connection signal="focus_entered" from="." to="." method="_on_Tech_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Tech_focus_exited"]
